force-app/main/default/objects/Imovel__c/Imovel__c.object-meta.xml
<CustomObject>
    <description>Imóvel angariado pela Terravista. Serve particulares e empreendimentos.</description>
    <label>Imóvel</label>
    <nameField>
        <label>Referência do Imóvel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Imóveis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>