force-app/main/default/objects/Imovel__c/fields/Area_Bruta_Construcao_m2__c.field-meta.xml
<CustomField>
    <fullName>Area_Bruta_Construcao_m2__c</fullName>
    <description>Area bruta de construcao permitida pelo PDM. So em terrenos.</description>
    <label>Área Bruta de Construção (m²)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>