force-app/main/default/objects/Imovel__c/fields/Area_m2__c.field-meta.xml
<CustomField>
    <fullName>Area_m2__c</fullName>
    <label>Área (m²)</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>