force-app/main/default/objects/Imovel__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <description>Contrato de mediação ao abrigo do qual o imóvel é comercializado.</description>
    <label>Contrato de Mediação</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Imóveis</relationshipLabel>
    <relationshipName>Imoveis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>