force-app/main/default/objects/Imovel__c/fields/Data_Disponibilizacao__c.field-meta.xml
<CustomField>
    <fullName>Data_Disponibilizacao__c</fullName>
    <description>Data em que o imovel ficou disponivel para venda.</description>
    <label>Disponível Desde</label>
    <type>Date</type>
</CustomField>