force-app/main/default/objects/Imovel__c/fields/Dias_Disponivel__c.field-meta.xml
<CustomField>
    <fullName>Dias_Disponivel__c</fullName>
    <description>Dias que o imovel esta em carteira sem vender.</description>
    <formula>IF(
  OR(ISBLANK(Data_Disponibilizacao__c), NOT(ISPICKVAL(Estado_Comercial__c, "Disponivel"))),
  null,
  TODAY() - Data_Disponibilizacao__c
)</formula>
    <label>Dias Disponível</label>
    <precision>5</precision><scale>0</scale>
    <type>Number</type>
</CustomField>