force-app/main/default/objects/Imovel__c/fields/Elevador__c.field-meta.xml
<CustomField>
    <fullName>Elevador__c</fullName>
    <description>Indica se o edificio tem elevador.</description>
    <label>Elevador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Sim</fullName><default>false</default><label>Sim</label></value>
            <value><fullName>Nao</fullName><default>false</default><label>Não</label></value>
            <value><fullName>Nao aplicavel</fullName><default>false</default><label>Não aplicável</label></value>
            <value><fullName>Por confirmar</fullName><default>false</default><label>Por confirmar</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>