force-app/main/default/objects/Imovel__c/fields/Estado_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Estado_Comercial__c</fullName>
    <description>Estado comercial do imóvel. Sincronizado por Flow com o negócio.</description>
    <label>Estado Comercial</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Disponivel</fullName><default>true</default><label>Disponível</label></value>
            <value><fullName>Reservado</fullName><default>false</default><label>Reservado</label></value>
            <value><fullName>Vendido</fullName><default>false</default><label>Vendido</label></value>
            <value><fullName>Arrendado</fullName><default>false</default><label>Arrendado</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>