force-app/main/default/objects/Imovel__c/fields/Finalidade__c.field-meta.xml
<CustomField>
    <fullName>Finalidade__c</fullName>
    <description>Venda ou arrendamento. Distingue a leitura do preco.</description>
    <label>Finalidade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Venda</fullName><default>true</default></value>
            <value><fullName>Arrendamento</fullName><default>false</default></value>
            <value><fullName>Venda ou Arrendamento</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>