force-app/main/default/objects/Imovel__c/fields/Foto__c.field-meta.xml
<CustomField>
    <fullName>Foto__c</fullName>
    <description>Mostra a fotografia do imovel no registo.</description>
    <label>Fotografia</label>
    <formula>IF(ISBLANK(Foto_URL__c), &quot;&quot;, IMAGE(Foto_URL__c, &quot;Fotografia do imovel&quot;, 200, 300))</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>