force-app/main/default/objects/Imovel__c/fields/Foto_URL__c.field-meta.xml
<CustomField>
    <fullName>Foto_URL__c</fullName>
    <description>URL da fotografia do imovel.</description>
    <label>URL da fotografia</label>
    <type>Url</type>
</CustomField>