force-app/main/default/objects/Imovel__c/fields/Localizacao__c.field-meta.xml
<CustomField>
    <fullName>Localizacao__c</fullName>
    <description>Freguesia e concelho. Criterio central de matching.</description>
    <label>Localização</label>
    <length>150</length>
    <type>Text</type>
</CustomField>