force-app/main/default/objects/Imovel__c/fields/Piso__c.field-meta.xml
<CustomField>
    <fullName>Piso__c</fullName>
    <description>Texto e não número: existem pisos "R/C", "Cave", "Sótão".</description>
    <label>Piso</label>
    <length>20</length>
    <type>Text</type>
</CustomField>