force-app/main/default/objects/Imovel__c/fields/Tipo_Imovel__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Imovel__c</fullName>
    <label>Tipo de Imóvel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Apartamento</fullName><default>true</default><label>Apartamento</label></value>
            <value><fullName>Moradia</fullName><default>false</default><label>Moradia</label></value>
            <value><fullName>Fracao</fullName><default>false</default><label>Fração de Empreendimento</label></value>
            <value><fullName>Terreno</fullName><default>false</default><label>Terreno</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>