force-app/main/default/objects/Imovel__c/fields/Tipo_Solo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Solo__c</fullName>
    <description>Classificacao do solo em PDM. Aplica-se a terrenos.</description>
    <label>Tipo de Solo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Urbano</fullName><default>false</default><label>Urbano</label></value>
            <value><fullName>Urbanizavel</fullName><default>false</default><label>Urbanizável</label></value>
            <value><fullName>Rustico</fullName><default>false</default><label>Rústico</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>