force-app/main/default/objects/Imovel__c/fields/Tipologia__c.field-meta.xml
<CustomField>
    <fullName>Tipologia__c</fullName>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>T0</fullName><default>false</default><label>T0</label></value>
            <value><fullName>T1</fullName><default>false</default><label>T1</label></value>
            <value><fullName>T2</fullName><default>false</default><label>T2</label></value>
            <value><fullName>T3</fullName><default>false</default><label>T3</label></value>
            <value><fullName>T4+</fullName><default>false</default><label>T4 ou superior</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>