force-app/main/default/objects/Imovel__c/validationRules/Area_tem_de_ser_positiva.validationRule-meta.xml
<ValidationRule>
    <fullName>Area_tem_de_ser_positiva</fullName>
    <active>true</active>
    <description>Area zero provoca divisao por zero no preco por m2.</description>
    <errorConditionFormula>OR(ISBLANK(Area_m2__c), Area_m2__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Area_m2__c</errorDisplayField>
    <errorMessage>A área tem de ser maior que zero.</errorMessage>
</ValidationRule>