force-app/main/default/objects/Imovel__c/validationRules/Preco_tem_de_ser_positivo.validationRule-meta.xml
<ValidationRule>
    <fullName>Preco_tem_de_ser_positivo</fullName>
    <active>true</active>
    <description>Preco zero destroi qualquer media ou soma de carteira.</description>
    <errorConditionFormula>OR(ISBLANK(Preco__c), Preco__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Preco__c</errorDisplayField>
    <errorMessage>O preço tem de ser maior que zero.</errorMessage>
</ValidationRule>