force-app/main/default/objects/Imovel__c/listViews/Disponiveis.listView-meta.xml
<ListView>
    <fullName>Disponiveis</fullName>
    <columns>NAME</columns>
    <columns>Tipologia__c</columns>
    <columns>Localizacao__c</columns>
    <columns>Area_m2__c</columns>
    <columns>Preco__c</columns>
    <columns>Dias_Disponivel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Estado_Comercial__c</field>
        <operation>equals</operation>
        <value>Disponivel</value>
    </filters>
    <label>✅ Disponíveis</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>