force-app/main/default/objects/Imovel__c/listViews/Parados_ha_muito_tempo.listView-meta.xml
<ListView>
    <fullName>Parados_ha_muito_tempo</fullName>
    <columns>NAME</columns>
    <columns>Tipologia__c</columns>
    <columns>Localizacao__c</columns>
    <columns>Preco__c</columns>
    <columns>Dias_Disponivel__c</columns>
    <columns>Contrato__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dias_Disponivel__c</field>
        <operation>greaterThan</operation>
        <value>60</value>
    </filters>
    <label>🐢 Parados há mais de 60 dias</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>